# BaseCppProject

./: README.md  requirements.txt
src/: .clang-format  CMakeLists.txt
src/base/: CMakeLists.txt
src/cmake/: functions.cmake  install_conan_packages.cmake
